--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@ server.port=9797
 spring.jpa.database=ORACLE
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto = create-drop
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:NEPTUNO
-spring.datasource.username=MEDIAAPP
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:NEPTUNO
+spring.datasource.url=jdbc:oracle:thin:@132.145.159.7:1521:FSOCIETY
+spring.datasource.username=MEDIAPP
 spring.datasource.password=123
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
